# owner-signal-persona-spirit

./: Cargo.toml  flake.nix  owner-spirit.schema
examples/: canonical.nota
src/: lib.rs
tests/: full_schema.rs  round_trip.rs  schema_module.rs
