[package]
name         = "owner-signal-persona-spirit"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/owner-signal-persona-spirit"
description  = "OwnerSignal contract for privileged persona-spirit lifecycle and policy."
publish      = false

[lib]
name = "owner_signal_persona_spirit"
path = "src/lib.rs"

[dependencies]
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "operator-full-schema-spirit-2026-05-26" }
nota-codec   = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror    = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
