[package]
name         = "owner-signal-persona-spirit"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/owner-signal-persona-spirit"
description  = "OwnerSignal contract for privileged persona-spirit lifecycle and policy."
publish      = false

[lib]
name = "owner_signal_persona_spirit"
path = "src/lib.rs"

[dependencies]
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
nota-codec   = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror    = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"

# POC override (psyche 2026-05-26 + intent records 709, 710): use the
# local signal-frame + schema POC worktrees so the extended
# universal-Unknown post-pass (Reply + Response) reaches here without
# a publish cycle. Production stack keeps upstream pins.
[patch."https://github.com/LiGoldragon/signal-frame.git"]
signal-frame = { path = "/home/li/wt/github.com/LiGoldragon/signal-frame/designer-schema-poc-106-2026-05-26" }

[patch."https://github.com/LiGoldragon/schema.git"]
schema = { path = "/home/li/wt/github.com/LiGoldragon/schema/designer-schema-poc-from-v0.3-main-2026-05-26" }
